<resources>
    <string name="app_name">My Places</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places">My Places</string>
    <string name="about">About</string>

    <string name="about_text">
        <i>My place</i> is application that will help you remember characteristics and locations of your favourite places. 
        It will be able to show your places on map and enable you to share them with your friends. Each week this application will be batter and batter
        and you will earn <i>points</i> from your teaching assistant.
    </string>
    <string name="ok">Ok</string>
    <string name="title_activity_edit_my_place">EditMyPlaceActivity</string>
    <string name="editName">Edit place name</string>
    <string name="editDescription">Edit place description</string>
    <string name="finished">Finish place edit</string>
    <string name="cancvel">Cancvel place edit</string>
    <string name="ViewMyPlace">ViewMyPlaceActivity</string>
    <string name="Ok">OK</string>
    <string name="title_activity_my_places_maps">MyPlacesMapsActivity</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="getLocation">Get Location</string>
</resources>
