<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team4infinty.com.MainActivity">
    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        android:icon="@drawable/baseline_map_white_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_places_list"
        android:orderInCategory="100"
        android:title="@string/my_places"
        android:icon="@drawable/baseline_list_white_36"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:icon="@drawable/outline_info_white_24"
        android:title="@string/about"
        app:showAsAction="ifRoom" />

</menu>
